--- a/spark/challenges/challenge_1.ipynb
+++ b/spark/challenges/challenge_1.ipynb
@@ -54,37 +54,23 @@
     {
       "cell_type": "code",
       "source": [
-        "!ls -l lake/"
+        "!mkdir -p /content/lake/bronze"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dIya5aHplALd",
-        "outputId": "af5a565d-3b58-4fd5-e060-7207aedf63b1"
+        "id": "dIya5aHplALd"
       },
       "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "total 8\n",
-            "drwxr-xr-x 5 root root 4096 Nov 22 20:31 bronze\n",
-            "drwxr-xr-x 3 root root 4096 Nov 22 20:31 silver\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uYXeODL0T1fO",
-        "outputId": "6a3847f5-745a-4a87-9356-7221953fa411"
+        "outputId": "41ae9c80-0ebc-48e9-e387-722251f883c6"
       },
       "outputs": [
         {
@@ -119,105 +105,97 @@
         "        return df\n",
         "\n",
         "    def extract_from_api(self, url: str, schema: StructType = None):\n",
-        "      response = requests.get(url)\n",
-        "      rdd = spark.sparkContext.parallelize(response.json())\n",
+        "        response = requests.get(url)\n",
+        "        rdd = spark.sparkContext.parallelize(response.json())\n",
         "\n",
-        "      if schema:\n",
-        "        df = spark.read.schema(schema).json(rdd)\n",
-        "      else:\n",
-        "        df = spark.read.json(rdd)\n",
-        "      return df\n",
+        "        if schema:\n",
+        "            df = spark.read.schema(schema).json(rdd)\n",
+        "        else:\n",
+        "            df = spark.read.json(rdd)\n",
+        "        return df\n",
         "\n",
         "    def load(self, df: DataFrame, format: str, path: str, partition_column: str = None, **kwargs) -> None:\n",
         "        if partition_column:\n",
-        "          df.coalesce(1).write.mode(\"overwrite\").partitionBy(partition_column).format(format).save(path)\n",
+        "            df.coalesce(1).write.mode(\"overwrite\").partitionBy(partition_column).format(format).save(path)\n",
         "        else:\n",
-        "          df.coalesce(1).write.mode(\"overwrite\").format(format).save(path)\n",
+        "            df.coalesce(1).write.mode(\"overwrite\").format(format).save(path)\n",
         "\n",
         "class ETLTask(ETLFlow):\n",
         "\n",
         "    def __init__(self, spark: SparkSession) -> None:\n",
-        "        self.spark = spark\n",
+        "        super().__init__(spark)\n",
         "\n",
         "    def ingestion_lines(self):\n",
-        "      # schema\n",
-        "      lines_schema = StructType([StructField('color', StringType(), True),\n",
-        "                                 StructField('facilities', ArrayType(StringType(), True), True),\n",
-        "                                 StructField('id', StringType(), True),\n",
-        "                                 StructField('localities',ArrayType(StringType(), True), True),\n",
-        "                                 StructField('long_name', StringType(), True),\n",
-        "                                 StructField('municipalities', ArrayType(StringType(), True), True),\n",
-        "                                 StructField('patterns', ArrayType(StringType(), True), True),\n",
-        "                                 StructField('routes', ArrayType(StringType(), True), True),\n",
-        "                                 StructField('short_name', StringType(), True), StructField('text_color', StringType(), True)])\n",
-        "      # ingestion\n",
-        "      df = self.extract_from_api(url=\"https://api.carrismetropolitana.pt/lines\", schema=lines_schema)\n",
-        "      # load\n",
-        "      self.load(df=df, format=\"parquet\", path=\"/content/lake/bronze/lines\")\n",
+        "        lines_schema = StructType([\n",
+        "            StructField('color', StringType(), True),\n",
+        "            StructField('facilities', ArrayType(StringType(), True), True),\n",
+        "            StructField('id', StringType(), True),\n",
+        "            StructField('localities', ArrayType(StringType(), True), True),\n",
+        "            StructField('long_name', StringType(), True),\n",
+        "            StructField('municipalities', ArrayType(StringType(), True), True),\n",
+        "            StructField('patterns', ArrayType(StringType(), True), True),\n",
+        "            StructField('routes', ArrayType(StringType(), True), True),\n",
+        "            StructField('short_name', StringType(), True),\n",
+        "            StructField('text_color', StringType(), True)\n",
+        "        ])\n",
+        "        df = self.extract_from_api(url=\"https://api.carrismetropolitana.pt/lines\", schema=lines_schema)\n",
+        "        self.load(df=df, format=\"parquet\", path=\"/content/lake/bronze/lines\")\n",
         "\n",
         "    def ingestion_vehicles(self):\n",
-        "      vehicle_schema = StructType([StructField('bearing', IntegerType(), True),\n",
-        "                                  StructField('block_id', StringType(), True),\n",
-        "                                  StructField('current_status', StringType(), True),\n",
-        "                                  StructField('id', StringType(), True),\n",
-        "                                  StructField('lat', FloatType(), True),\n",
-        "                                  StructField('line_id', StringType(), True),\n",
-        "                                  StructField('lon', FloatType(), True),\n",
-        "                                  StructField('pattern_id', StringType(), True),\n",
-        "                                  StructField('route_id', StringType(), True),\n",
-        "                                  StructField('schedule_relationship', StringType(), True),\n",
-        "                                  StructField('shift_id', StringType(), True),\n",
-        "                                  StructField('speed', FloatType(), True),\n",
-        "                                  StructField('stop_id', StringType(), True),\n",
-        "                                  StructField('timestamp', TimestampType(), True),\n",
-        "                                  StructField('trip_id', StringType(), True)])\n",
+        "        vehicle_schema = StructType([\n",
+        "            StructField('bearing', IntegerType(), True),\n",
+        "            StructField('block_id', StringType(), True),\n",
+        "            StructField('current_status', StringType(), True),\n",
+        "            StructField('id', StringType(), True),\n",
+        "            StructField('lat', FloatType(), True),\n",
+        "            StructField('line_id', StringType(), True),\n",
+        "            StructField('lon', FloatType(), True),\n",
+        "            StructField('pattern_id', StringType(), True),\n",
+        "            StructField('route_id', StringType(), True),\n",
+        "            StructField('schedule_relationship', StringType(), True),\n",
+        "            StructField('shift_id', StringType(), True),\n",
+        "            StructField('speed', FloatType(), True),\n",
+        "            StructField('stop_id', StringType(), True),\n",
+        "            StructField('timestamp', TimestampType(), True),\n",
+        "            StructField('trip_id', StringType(), True)\n",
+        "        ])\n",
+        "        df = self.extract_from_api(url=\"https://api.carrismetropolitana.pt/vehicles\", schema=vehicle_schema)\n",
+        "        df = df.withColumn(\"date\", expr(\"date(timestamp)\"))\n",
+        "        self.load(df=df, format=\"parquet\", path=\"/content/lake/bronze/vehicles\", partition_column=\"date\")\n",
         "\n",
-        "      df = self.extract_from_api(url=\"https://api.carrismetropolitana.pt/vehicles\", schema=vehicle_schema)\n",
-        "      # create date column\n",
-        "      # date(from_unixtime(1732305594))\n",
-        "      df = df.withColumn(\"date\", expr(\"date(timestamp)\"))\n",
-        "      self.load(df=df, format=\"parquet\", path=\"/content/lake/bronze/vehicles\", partition_column=\"date\")\n",
-        "\n",
-        "    def cleansing_vehicles(self):\n",
-        "      df = self.extract_from_file(format=\"parquet\", path=\"/content/lake/bronze/vehicles\")\n",
-        "      # transformations\n",
-        "      df = df.withColumn(\"new_column\", lit(\"test\"))\n",
-        "      df = df.drop_duplicates()\n",
-        "      self.load(df=df, format=\"parquet\", path=\"/content/lake/silver/vehicles\")\n",
-        "\n",
-        "    def enrich(self):\n",
-        "        pass\n",
+        "    def ingestion_municipalities(self):\n",
+        "        municipalities_schema = StructType([\n",
+        "            StructField('id', StringType(), True),\n",
+        "            StructField('name', StringType(), True)\n",
+        "        ])\n",
+        "        df = self.extract_from_api(url=\"https://api.carrismetropolitana.pt/municipalities\", schema=municipalities_schema)\n",
+        "        self.load(df=df, format=\"parquet\", path=\"/content/lake/bronze/municipalities\")\n",
         "\n",
         "if __name__ == '__main__':\n",
-        "    # init spark\n",
-        "    from pyspark.sql import SparkSession\n",
         "    spark = SparkSession.builder.master('local').appName('ETL Program').getOrCreate()\n",
         "\n",
         "    print(\"Starting ETL program\")\n",
         "    etl = ETLTask(spark)\n",
         "\n",
-        "    # run tasks\n",
         "    print(\"Running Task - Ingestion Vehicles\")\n",
         "    etl.ingestion_vehicles()\n",
         "\n",
         "    print(\"Running Task - Ingestion Lines\")\n",
         "    etl.ingestion_lines()\n",
         "\n",
-        "    #print(\"Running Task - Cleansing Vehicles\")\n",
-        "    # etl.cleansing_vehicles()\n",
+        "    print(\"Running Task - Ingestion Municipalities\")\n",
+        "    etl.ingestion_municipalities()\n",
         "\n",
-        "    #etl.enrich()\n",
-        "\n",
-        "    print(\"ETL program completed\")\n"
+        "    print(\"ETL program completed\")"
       ],
       "metadata": {
         "id": "sVe3yuAvTz9c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8fda3c0d-1234-4d94-b22c-66f7145e483d"
+        "outputId": "f12a2171-c713-417f-dd62-678e1c72df9c"
       },
-      "execution_count": 16,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +203,35 @@
           "text": [
             "Starting ETL program\n",
             "Running Task - Ingestion Vehicles\n",
+            "Running Task - Ingestion Lines\n",
+            "Running Task - Ingestion Municipalities\n",
             "ETL program completed\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls -l /content/lake/bronze"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C3iBqc8qnDzr",
+        "outputId": "3486d5de-7285-4a1e-d875-4457da0c0395"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "total 12\n",
+            "drwxr-xr-x 2 root root 4096 Dec  3 17:59 lines\n",
+            "drwxr-xr-x 2 root root 4096 Dec  3 17:59 municipalities\n",
+            "drwxr-xr-x 3 root root 4096 Dec  3 17:59 vehicles\n"
           ]
         }
       ]
