--- a/spark/challenges/challenge_2.ipynb
+++ b/spark/challenges/challenge_2.ipynb
@@ -193,10 +193,25 @@
         "    print(\"ETL program completed\")\n"
       ],
       "metadata": {
-        "id": "1mC6d0Pw6EZM"
+        "id": "1mC6d0Pw6EZM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "40a4af87-3515-4d9f-d5b9-e410f4b75ed0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Starting ETL program\n",
+            "Running Task - Ingestion Vehicles\n",
+            "Running Task - Ingestion Lines\n",
+            "ETL program completed\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
